feat(rpc): introduce example